fixed spacing for overview page

--- a/RICH/css/overview.css
+++ b/RICH/css/overview.css
@@ -100,7 +100,7 @@ p {
 .main-content {
   width: 100%;
   height: 100%;
-  max-width: 1500px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 5rem 2rem;
   display: flex;
@@ -111,7 +111,7 @@ p {
 .main-content .row {
   display: flex;
   justify-content: space-between;
-  gap: 3rem;
+  gap: 5rem;
   align-items: center;
 }
 
